--- a/app/elements/challenge/challenge-card.html
+++ b/app/elements/challenge/challenge-card.html
@@ -71,8 +71,7 @@
 			is: 'challenge-card',
 			properties: {
 				challenge: {
-					type: Object,
-					notify: true
+					type: Object
 				},
 				duration: {
 					type: String,
@@ -80,7 +79,6 @@
 				},
 				elevation: {
 					type: Number,
-					notify: true,
 					value: 1
 				}
 			},
