--- a/app/index.html
+++ b/app/index.html
@@ -147,7 +147,7 @@
 					</paper-material>
 				</section>
 				<section data-route="error">
-					<error-page id="error"></error-page>
+					<error-page id="error" error="{{error}}"></error-page>
 				</section>
 			</iron-pages>
 		</div>
