--- a/app/elements/services/challenge-service.html
+++ b/app/elements/services/challenge-service.html
@@ -8,12 +8,31 @@
 	</style>
 	<template>
 		<iron-ajax
-			id="getChallengeById"
+			id="postChallenge"
+			method="POST"
 			handle-as="json"
+			content-type="application/json"
 			last-response="{{challenge}}"
-			on-error="_onError"
+			with-credentials="true"
+			on-error="_onError">
+		</iron-ajax>
+		<iron-ajax
+			id="getSingleChallenge"
 			method="GET"
-			with-credentials="true">
+			handle-as="json"
+			content-type="application/json"
+			last-response="{{challenge}}"
+			with-credentials="true"
+			on-error="_onError">
+		</iron-ajax>
+		<iron-ajax
+			id="getMultiChallenges"
+			method="GET"
+			handle-as="json"
+			content-type="application/json"
+			last-response="{{challenges}}"
+			with-credentials="true"
+			on-error="_onError">
 		</iron-ajax>
 	</template>
 	<script>
@@ -24,11 +43,30 @@
 					type: Object,
 					notify: true,
 					reflectToAttribute: true
+				},
+				challenges: {
+					type: Array,
+					notify: true,
+					reflectToAttribute: true
 				}
 			},
+			save: function(challenge){
+				this.$.postChallenge.url = util.build('/challenges');
+				this.$.postChallenge.body = challenge;
+				this.$.postChallenge.generateRequest();
+			},
 			getById: function(key){
-				this.$.getChallengeById = util.build('/challenges/' + key);
-				this.$.getChallengeById.generateRequest();
+				this.$.getSingleChallenge.url = util.build('/challenges/' + key);
+				this.$.getSingleChallenge.generateRequest();
+			},
+			getLatestChallengesByProfileId: function(profileKey){
+				// TODO(victorbalan): Refactor the way we deal with query params.
+				this.$.getMultiChallenges.url = util.build('/profiles/' + profileKey + '/challenges?finished=true&limit=10&order=-Finished');
+				this.$.getMultiChallenges.generateRequest();
+			},
+			getByCompanyId: function(companyKey){
+				this.$.getMultiChallenges.url = util.build('/companies/' + companyKey + '/challenges');
+				this.$.getMultiChallenges.generateRequest();
 			},
 			_onError: function(err){
 				util.error(err);
